# RecipeScraper

./: pyproject.toml
recipe_data/: air-fryer-chicken-thighs.json  air-fryer-whole-chicken.json  asian-chicken-lettuce-wraps.json  bacon-spinach-breakfast-casserole.json  butternut-squash-galette.json  fennel-gratin.json  greek-yogurt-caesar-dip.json  healthy-chocolate-chip-oat-cookies.json  herb-roasted-carrots.json  high-protein-zucchini-omelet-for-one.json  how-to-make-an-epic-charcuterie-and-cheese-board.json  kale-and-brussels-sprout-salad.json  make-over-breakfast-sausage-and.json  one-pot-orzo-with-sausage-spinach-and-corn.json  oysters-rockefeller.json  rainbow-quinoa-salad-with-lemon-dressing.json  savory-steel-cut-oats.json  sheet-pan-thanksgiving-dinner.json  slow-cooker-steel-cut-oats.json  spicy-vodka-chicken-parmesan.json  spinach-dip-stuffed-mushrooms.json  spinach-prosciutto-and-mozzarella.json  stuffed-butternut-squash.json  tortilla-soup.json  veggie-stromboli.json
recipe_data2/: 15-minute-protein-chia-seed-cereal.json  20-minute-veggie-lo-mein-bowl.json  air-fryer-baked-potato.json  air-fryer-beef-empanadas.json  air-fryer-breaded-cubed-steak.json  air-fryer-breakfast-banana-split.json  air-fryer-butternut-squash.json  air-fryer-chicken-tenders.json  air-fryer-chicken-thighs.json  air-fryer-egg-salad.json  air-fryer-popcorn-chicken.json  air-fryer-rotisserie-chicken.json  air-fryer-salmon-sandwich.json  air-fryer-salmon-with-maple-soy-glaze.json  air-fryer-steak.json  air-fryer-sweet-plantains.json  air-fryer-whole-chicken.json  artichoke-pie.json  (+191 more)
(+30 files in other folders)
