[tool.poetry]
name = "recipe-scraper"
version = "0.1.0"
description = ""
authors = ["Joe <jessex7@pm.me>"]
readme = "README.md"
packages = [{include = "recipe_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
